Added reference links

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <ul class="main-nav">
                 <li>Basics</li>
                 <ul class="sub-nav">
+                  <li><a href="pages/basics/links.html">Links and references</a></li>
                     <li><a href="pages/basics/linking-js.html">Linking JS to your page</a></li>
                 </ul>
             </ul>
