--- a/index.html
+++ b/index.html
@@ -17,13 +17,28 @@
 
     <section class="container">
         <h1>Table of Contents</h1>
-        <h2>Tutorial pages</h2>
+
+
+        <h2>Basics</h2>
         <nav>
             <ul class="main-nav">
-                <li>Basics</li>
+
                 <ul class="sub-nav">
-                  <li><a href="pages/basics/links.html">Links and references</a></li>
+                  <li><a href="pages/basics/console.html">The browser console</a></li>
                     <li><a href="pages/basics/linking-js.html">Linking JS to your page</a></li>
+                    <li><a href="pages/basics/operators.html">Operators</a></li>
+                    <li><a href="pages/basics/strings.html">Strings</a></li>
+                </ul>
+            </ul>
+        </nav>
+
+        <h2>Script examples</h2>
+        <nav>
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+                  <li><a href="pages/basics/syntax.html">Basic Syntax</a></li>
+                  <li><a href="pages/scripts/script-basics.html">Basic script examples</a></li>
                 </ul>
             </ul>
         </nav>
@@ -31,13 +46,24 @@
         <h2>Common Code examples</h2>
         <nav>
             <ul class="main-nav">
-                <li>Basics</li>
+
                 <ul class="sub-nav">
-                    <li><a class="red" href="common-code/common-code.html">Common code to be resued</a>
+                    <li><a class="red" href="examples/code-examples.html">Common code examples</a>
+                      <li><a href="examples/test-page.html">Test Page</a>
                 </ul>
             </ul>
         </nav>
 
+
+        <h2>Links and References</h2>
+        <nav>
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+                  <li><a href="pages/basics/links.html">Links and references</a></li>
+                </ul>
+            </ul>
+        </nav>
 
 
         <script src="_js/jquery.js"></script>
