--- a/pages/basics/links.html
+++ b/pages/basics/links.html
@@ -108,10 +108,8 @@
         <div class="row">
             <div class="col">
                 <h1>Help manuals</h1>
-
             </div>
         </div>
-
 
         <table class="table table-dark">
             <thead>
@@ -138,6 +136,31 @@
         </table>
 
 
+        <div class="row">
+            <div class="col">
+                <h1>Tutorials</h1>
+            </div>
+        </div>
+
+        <table class="table table-dark">
+            <thead>
+                <tr>
+                    <th scope="col">Site</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">URL</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>JavaScript tutorial</td>
+                    <td>Lots of examples.</td>
+                    <td><a href="http://javascript.info/" target="_blank">JavaScript Tutorial</a></td>
+                </tr>
+
+
+            </tbody>
+        </table>
 
 
 
