--- a/examples/test-page.html
+++ b/examples/test-page.html
@@ -17,21 +17,12 @@
 
 
 
+// alert( "testme".substring(4, -1) )
+alert ( "testme".slice(4, -4));
 
 
 
 
-    var str = "string text"
-  alert( str.charAt(2) )
-
-  var str = "string text"
-  alert(str[2])
-
-
-
-
-
-  
     </script>
 </head>
 
