--- a/pages/basics/strings.html
+++ b/pages/basics/strings.html
@@ -207,61 +207,249 @@ alert(str)</pre>
 
 
 
-<section class="container">
-    <h2>String length</h2>
-    <div class="row">
-        <div class="col-6">
-            <p>Print the number of characters in a string.</p>
-            <p>This prints 3 since the newline is its own character.</p>
-        </div>
+    <section class="container">
+        <h2>String length</h2>
+        <div class="row">
+            <div class="col-6">
+                <p>Print the number of characters in a string.</p>
+                <p>This prints 3 since the newline is its own character.</p>
+            </div>
 
-        <div class="col-6">
-            <pre class="example"><span class="code-js">var str = "My\n"
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var str = "My\n"
 alert(str.length)</pre>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
 
 
 
 
-<section class="container">
-    <h2>Accessing a single character in a string</h2>
-    <div class="row">
-        <div class="col-6">
-            <p>There are 2 ways to do this.</p>
-        </div>
+    <section class="container">
+        <h2>Accessing a single character in a string</h2>
+        <div class="row">
+            <div class="col-6">
+                <p>There are 2 ways to do this.</p>
+            </div>
 
-        <div class="col-6">
-            <pre class="example"><span class="code-js">var str = "string text"
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var str = "string text"
 alert( str.charAt(2) )
 
 var str = "string text"
 alert(str[2])</pre>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
 
 
 
 
 
-<section class="container">
-    <h2>Changing string text</h2>
-    <div class="row">
-        <div class="col-6">
-            <p>It's not possible to change the text of a string.</p>
-            <p>However, you can re-created the string one part at a time.</p>
-            <p>This changes the text 'string' into 'ring'.</p>
-        </div>
+    <section class="container">
+        <h2>Changing string text</h2>
+        <div class="row">
+            <div class="col-6">
+                <p>It's not possible to change the text of a string.</p>
+                <p>However, you can re-created the string one part at a time.</p>
+                <p>This changes the text 'string' into 'ring'.</p>
+            </div>
 
-        <div class="col-6">
-            <pre class="example"><span class="code-js">var str = "string"
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var str = "string"
 str = str.charAt(2) + str.charAt(3) + str.charAt(4) + str.charAt(5)
 alert(str)</pre>
+            </div>
         </div>
+    </section>
+
+
+
+
+    <section class="container">
+        <h2>Changing string case</h2>
+        <h3>Uppercase</h3>
+        <div class="row">
+            <div class="col-6">
+                <p>Use the method toUpperCase to change the string to uppercase text.</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">alert( "Hey-ho!".toUpperCase() )</pre>
+            </div>
+        </div>
+
+        <h3>Lowercase</h3>
+        <div class="row">
+            <div class="col-6">
+                <p>Use the method toLowerCase to change the string to lowercase text.</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">alert( "Hey-ho!".toLowerCase() )</pre>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+    <section class="container">
+        <h2>Searching for a sub-string in a string</h2>
+
+        <div class="row">
+            <div class="col-6">
+                <p>Use indexOf() to search for a sub-string within a string.</p>
+                <p>It returns the position of a first occurence of a substring or -1 if nothing found.</p>
+                <p>This example returns the following:</p>
+                <ul>
+                    <li>returns 0</li>
+                    <li>returns 1 because the second character starts with 'id'</li>
+                    <li>returns -1</li>
+                </ul>
+
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var str = "Widget with id"
+
+alert( str.indexOf("Widget") )
+alert( str.indexOf("id") )
+alert( str.indexOf("Lalala") ) </pre>
+            </div>
+        </div>
+
+        <h3>Find sub-string after beginning at a specific index</h3>
+        <div class="row">
+            <div class="col-6">
+                <p>This starts searching at character 2.</p>
+                <p>It returns 12 because that's the first character position (after 2) that starts with 'id'.</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var str = "Widget with id"
+alert( str.indexOf("id", 2) ) </pre>
+            </div>
+        </div>
+
+
+        <h3>Find a sub-string starting at a specific character</h3>
+        <div class="row">
+            <div class="col-6">
+                <p>Syntax</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">substr(beginning_value , how_many_to_extract)</pre>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-6">
+                <p>This prints 'ring'.</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var str = "stringify"
+str = str.substr(2,4)
+alert(str)</pre>
+            </div>
+        </div>
+
+
+
+
+  <h3>Find a sub-string between specific characters</h3>
+
+        <div class="row">
+            <div class="col-6">
+                <p>Syntax</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">substring(beginning_value , end_value)</pre>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-6">
+                <p>This prints the letter 's'.</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var str = "stringify"
+alert(str.substring(0,1))</pre>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-6">
+                <p>This prints ringify since only the first value was specified.</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var str = "stringify"
+alert(str.substring(2))</pre>
+            </div>
+        </div>
+
+<h4>What if first value is larger than second?</h4>
+<div class="row">
+    <div class="col-6">
+        <p>If the first value is larger, the values are swapped.</p>
+        <p>-1 becomes zero, then the values are swapped.</p>
+        <p>This returns 'test'.</p>
     </div>
-</section>
+    <div class="col-6">
+        <pre class="example"><span class="code-js">alert( "testme".substring(4, -1) )</pre>
+    </div>
+</div>
+
+
+<h4>NOTE: slice() does the same thing</h4>
+<div class="row">
+    <div class="col-6">
+        <p>The difference between slice() and substring() is how they treat negative and overflow values.</p>
+        <p>Negative values using substring() become zero.</p>
+        <p>This returns 'testme' because -2 becomes 0, and there's no second value.</p>
+
+    </div>
+    <div class="col-6">
+        <pre class="example"><span class="code-js">alert( "testme".substring(-2) ) </pre>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <p>slice is the same with positive values.</p>
+        <p>This returns 'test'.</p>
+
+    </div>
+    <div class="col-6">
+        <pre class="example"><span class="code-js">alert ( "testme".slice(0, 4));</pre>
+    </div>
+</div>
+
+
+
+<div class="row">
+    <div class="col-6">
+        <p>With slice() and negative values, it counts back from the end.</p>
+        <p>This returns 'me'.</p>
+
+    </div>
+    <div class="col-6">
+        <pre class="example"><span class="code-js">alert( "testme".slice(-2) )  </pre>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="col-6">
+                <p><span class="red">why does this return 'm'?</span></p>
+
+    </div>
+    <div class="col-6">
+        <pre class="example"><span class="code-js">alert ( "testme".slice(4, -1));</pre>
+    </div>
+</div>
+    </section>
+
+
 
 
 
