--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                     <li><a href="pages/basics/linking-js.html">Linking JS to your page</a></li>
                     <li><a href="pages/basics/operators.html">Operators</a></li>
                     <li><a href="pages/basics/strings.html">Strings</a></li>
+                    <li><a href="pages/basics/typeof.html">Type Of</a></li>
+                    <li><a href="pages/basics/this.html">this</a></li>
+                    <li><a href="pages/basics/variables.html">Variables and Scope</a></li>
                 </ul>
             </ul>
         </nav>
