--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
                 <ul class="sub-nav">
                   <li><a href="pages/basics/console.html">The browser console</a></li>
+                    <li><a href="pages/basics/displaying-data.html">Displaying data</a></li>
                     <li><a href="pages/basics/linking-js.html">Linking JS to your page</a></li>
                     <li><a href="pages/basics/operators.html">Operators</a></li>
                     <li><a href="pages/basics/strings.html">Strings</a></li>
