--- a/pages/basics/links.html
+++ b/pages/basics/links.html
@@ -20,57 +20,105 @@
 
 
 
+        <div class="row">
+            <div class="col">
+                <h1>Terminology</h1>
 
-
-
-      <div class="row">
-          <div class="col">
-              <h1>Browser info</h1>
-
-          </div>
-      </div>
-
-            <div class="row">
-                <div class="col">
-                    <h3>Engines</h3>
-                        </div>
             </div>
+        </div>
 
-      <table class="table table-dark">
-          <thead>
-              <tr>
-                  <th scope="col">Site</th>
-                  <th scope="col">Description</th>
-                  <th scope="col">URL</th>
 
-              </tr>
-          </thead>
-          <tbody>
-              <tr>
-                  <td>Firefox</td>
-                  <td>Uses an open-source engine called Gecko.</td>
-                  <td></td>
-              </tr>
+        <table class="table table-dark">
+            <thead>
+                <tr>
+                    <th scope="col">Term</th>
+                    <th scope="col">Description</th>
 
-              <tr>
-                  <td>Safari/Chrome</td>
-                  <td>Uses an open-source rendering engine called Webkit, but different JavaScript implementations. Chrome uses Google V8. Safari uses it’s own closed-source JavaScript engine.</td>
-                  <td></td>
-              </tr>
 
-              <tr>
-                  <td>Opera</td>
-                  <td>Uses it’s closed source engine called Presto.</td>
-                  <td></td>
-              </tr>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>ECMAScript 5.1</td>
+                    <td>Created in 2011 and is the current standard, but it's outdated.</td>
+                </tr>
+                <tr>
+                    <td>ECMAScript 2015</td>
+                    <td>ES6. This is the emerging standard. Spotty support, needs a transpiler like Babel to work.</td>
+                </tr>
 
-              <tr>
-                  <td>IE</td>
-                  <td>Uses the closed-source engine called Trident.</td>
-                  <td></td>
-              </tr>
-          </tbody>
-      </table>
+                <tr>
+                    <td>Quirks mode and Standards mode</td>
+                    <td>
+                        <h5>Quirks Mode (old code for old browsers)</h5>
+                        <ul><li>emulates nonstandard behavior in Navigator 4 and Internet Explorer 5. This is essential in order to support websites that were built before the widespread adoption of web standards</li>
+                            <li>Quirks mode allows for backwards compatability</li>
+                        </ul>
+                        <h5>Standards Mode (modern)</h5>
+                        <ul><li>the behavior is (hopefully) the behavior described by the HTML and CSS specifications</li>
+                            <li>Standards mode is rendered according to the HTML and CSS specifications</li>
+                            <li>This DOCTYPE make modern browsers render in Standards Mode and older ones in Almost Standards Mode (which is the maximum they can do).</li>
+                        </ul>
+                        NOTE: There are JavaScript properties which also depend on the rendering mode, especially CSS-box and positioning-related.
+                    </td>
+                </tr>
+
+            </tbody>
+        </table>
+
+
+
+
+
+
+        <div class="row">
+            <div class="col">
+                <h1>Browser info</h1>
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <h3>Engines</h3>
+            </div>
+        </div>
+
+        <table class="table table-dark">
+            <thead>
+                <tr>
+                    <th scope="col">Site</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">URL</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Firefox</td>
+                    <td>Uses an open-source engine called Gecko.</td>
+                    <td></td>
+                </tr>
+
+                <tr>
+                    <td>Safari/Chrome</td>
+                    <td>Uses an open-source rendering engine called Webkit, but different JavaScript implementations. Chrome uses Google V8. Safari uses it’s own closed-source JavaScript engine.</td>
+                    <td></td>
+                </tr>
+
+                <tr>
+                    <td>Opera</td>
+                    <td>Uses it’s closed source engine called Presto.</td>
+                    <td></td>
+                </tr>
+
+                <tr>
+                    <td>IE</td>
+                    <td>Uses the closed-source engine called Trident.</td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
 
 
 
@@ -136,6 +184,10 @@
         </table>
 
 
+
+
+
+
         <div class="row">
             <div class="col">
                 <h1>Tutorials</h1>
@@ -155,9 +207,18 @@
                 <tr>
                     <td>JavaScript tutorial</td>
                     <td>Lots of examples.</td>
-                    <td><a href="http://javascript.info/" target="_blank">JavaScript Tutorial</a></td>
+                    <td><a href="http://javascript.info/" target="_blank">javascript.info</a></td>
                 </tr>
-
+                <tr>
+                    <td>JavaScript tutorial</td>
+                    <td>Lots of examples.</td>
+                    <td><a href="http://www.tutorialspoint.com/javascript/javascript_overview.htm" target="_blank">TutorialsPoint JavaScript Tutorial</a></td>
+                </tr>
+                <tr>
+                    <td>JavaScript tutorial</td>
+                    <td>Lots of examples.</td>
+                    <td><a href="http://www.w3schools.com/js/" target="_blank">W3Schools</a></td>
+                </tr>
 
             </tbody>
         </table>
@@ -240,6 +301,33 @@
                     <td>Eclipse</td>
                     <td></td>
                     <td></td>
+                </tr>
+
+            </tbody>
+        </table>
+
+
+
+
+        <div class="row">
+            <div class="col">
+                <h3>Other</h3>
+            </div>
+        </div>
+        <table class="table table-dark">
+            <thead>
+                <tr>
+                    <th scope="col">Site</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">URL</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>BabelJS</td>
+                    <td>Transpiler for JS. Converts ES6 to old versions of JS.</td>
+                    <td><a href="http://babeljs.io/" target="_blank">bablejs.io</a></td>
                 </tr>
 
             </tbody>
