--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
                     <li><a href="pages/basics/linking-js.html">Linking JS to your page</a></li>
                     <li><a href="pages/basics/operators.html">Operators</a></li>
                     <li><a href="pages/basics/strings.html">Strings</a></li>
-                    <li><a href="pages/basics/typeof.html">Type Of</a></li>
+
                     <li><a href="pages/basics/this.html">this</a></li>
+                    <li><a href="pages/basics/typeof.html">typeof</a></li>
                     <li><a href="pages/basics/variables.html">Variables and Scope</a></li>
                 </ul>
             </ul>
@@ -43,6 +44,16 @@
                 <ul class="sub-nav">
                   <li><a href="pages/basics/syntax.html">Basic Syntax</a></li>
                   <li><a href="pages/scripts/script-basics.html">Basic script examples</a></li>
+                </ul>
+            </ul>
+        </nav>
+
+        <h2>Interacting with page content</h2>
+        <nav>
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+                  <li><a href="pages/basics/accessing-the-dom.html">Accessing the DOM content</a></li>
                 </ul>
             </ul>
         </nav>
