--- a/pages/basics/links.html
+++ b/pages/basics/links.html
@@ -23,18 +23,14 @@
         <div class="row">
             <div class="col">
                 <h1>Terminology</h1>
-
             </div>
         </div>
-
 
         <table class="table table-dark">
             <thead>
                 <tr>
                     <th scope="col">Term</th>
                     <th scope="col">Description</th>
-
-
                 </tr>
             </thead>
             <tbody>
@@ -51,11 +47,13 @@
                     <td>Quirks mode and Standards mode</td>
                     <td>
                         <h5>Quirks Mode (old code for old browsers)</h5>
-                        <ul><li>emulates nonstandard behavior in Navigator 4 and Internet Explorer 5. This is essential in order to support websites that were built before the widespread adoption of web standards</li>
+                        <ul>
+                            <li>emulates nonstandard behavior in Navigator 4 and Internet Explorer 5. This is essential in order to support websites that were built before the widespread adoption of web standards</li>
                             <li>Quirks mode allows for backwards compatability</li>
                         </ul>
                         <h5>Standards Mode (modern)</h5>
-                        <ul><li>the behavior is (hopefully) the behavior described by the HTML and CSS specifications</li>
+                        <ul>
+                            <li>the behavior is (hopefully) the behavior described by the HTML and CSS specifications</li>
                             <li>Standards mode is rendered according to the HTML and CSS specifications</li>
                             <li>This DOCTYPE make modern browsers render in Standards Mode and older ones in Almost Standards Mode (which is the maximum they can do).</li>
                         </ul>
@@ -180,6 +178,38 @@
                     <td>Good for IE info.</td>
                     <td><a href="https://msdn.microsoft.com/en-us/default.aspx" target="_blank">Miscrosoft Development Network (MSDN)</a></td>
                 </tr>
+
+                <tr>
+                    <td>'window' object properties and methods</td>
+                    <td>Properties and Methods used to interact with the 'window' object.</td>
+                    <td><a href="https://developer.mozilla.org/en-US/docs/Web/API/Window" target="_blank">Properties and Methods for the 'window' object</a></td>
+                </tr>
+
+                <tr>
+                    <td>Document object properties and methods</td>
+                    <td>Properties and Methods used to interact with the Document object.</td>
+                    <td><a href="https://developer.mozilla.org/en-US/docs/Web/API/document" target="_blank">Properties and Methods of the Document</a></td>
+                </tr>
+
+                <tr>
+                    <td>querySelector</td>
+                    <td>Properties and Methods used to interact with the Document object.</td>
+                    <td><a href="https://developer.mozilla.org/en-US/docs/Web/API/Document/querySelector" target="_blank">querySelector</a></td>
+                </tr>
+
+                <tr>
+                    <td>querySelectorAll</td>
+                    <td>Properties and Methods used to interact with the Document object.</td>
+                    <td><a href="https://developer.mozilla.org/en-US/docs/Web/API/Document/querySelectorAll" target="_blank">querySelectorAll</a></td>
+                </tr>
+
+                <tr>
+                    <td>Read-Only Properties</td>
+                    <td>List of read-only properties.</td>
+                    <td><a href="https://developer.mozilla.org/en-US/docs/Web/API/Element" target="_blank">Read only properties</a></td>
+                </tr>
+
+
             </tbody>
         </table>
 
