--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             </ul>
         </nav>
 
+
+
         <h2>Script examples</h2>
         <nav>
             <ul class="main-nav">
@@ -48,15 +50,21 @@
             </ul>
         </nav>
 
+
+
         <h2>Interacting with page content</h2>
         <nav>
             <ul class="main-nav">
 
                 <ul class="sub-nav">
-                  <li><a href="pages/basics/accessing-the-dom.html">Accessing the DOM content</a></li>
+                  <li><a href="pages/dom/accessing-the-dom.html">Accessing the DOM content</a></li>
+                  <li><a href="pages/dom/read-only-properties.html">Interacting with READ-ONLY properties</a></li>
+                  <li><a href="pages/dom/changing-attributes.html">Changing attributes</a></li>
                 </ul>
             </ul>
         </nav>
+
+
 
         <h2>Common Code examples</h2>
         <nav>
@@ -70,6 +78,8 @@
         </nav>
 
 
+
+
         <h2>Links and References</h2>
         <nav>
             <ul class="main-nav">
@@ -79,6 +89,9 @@
                 </ul>
             </ul>
         </nav>
+
+
+
 
 
         <script src="_js/jquery.js"></script>
