lots of new stuff

--- a/examples/test-page.html
+++ b/examples/test-page.html
@@ -1,33 +1,35 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="../../_css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../../_css/style.css">
-
     <title>Test Page</title>
 </head>
 
 <body>
 
-    <div class="cta" ) <a href="#">Book now!</a>
-    </div>
+<p id="demo"></p>
 
-
-    <p id="pID" class="myClass"><a href="#">header here</a></p>
-    <br>
-    <button onclick="myFunction()">Click to change</button>
 </body>
 
 
 
 <script>
-const CTAELEMENT = document.querySelector(".cta a")
+
+
+var plus = function(a,b) {
+  return console.log(a + b);
+};
+
+//call the function
+plus(2,2);
+
+
+
 </script>
 
 </html>
