--- a/index.html
+++ b/index.html
@@ -60,9 +60,23 @@
                   <li><a href="pages/dom/accessing-the-dom.html">Accessing the DOM content</a></li>
                   <li><a href="pages/dom/read-only-properties.html">Interacting with READ-ONLY properties</a></li>
                   <li><a href="pages/dom/changing-attributes.html">Changing attributes</a></li>
+                  <li><a href="pages/dom/changing-css.html">Changing CSS</a></li>
+                  <li><a href="pages/dom/adding-elements.html">Adding elements to the DOM</a></li>
                 </ul>
             </ul>
         </nav>
+
+
+        <h2>Functions</h2>
+        <nav>
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+                  <li><a href="pages/functions/basic-functions.html">Basic Functions</a></li>
+                </ul>
+            </ul>
+        </nav>
+
 
 
 
@@ -76,8 +90,6 @@
                 </ul>
             </ul>
         </nav>
-
-
 
 
         <h2>Links and References</h2>
