--- a/pages/basics/links.html
+++ b/pages/basics/links.html
@@ -69,6 +69,39 @@
 
 
 
+
+
+
+
+                <div class="row">
+                    <div class="col">
+                        <h1>Tools</h1>
+                    </div>
+                </div>
+
+                <table class="table table-dark">
+                    <thead>
+                        <tr>
+                            <th scope="col">Site</th>
+                            <th scope="col">Description</th>
+                            <th scope="col">URL</th>
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>JavaScript variable name validator</td>
+                            <td>Tests JS variables</td>
+                            <td><a href="https://mothereff.in/js-variables" target="_blank">JS variable name validator</a></td>
+                        </tr>
+
+
+                    </tbody>
+                </table>
+
+
+
+
         <div class="row">
             <div class="col">
                 <h1>Browser info</h1>
@@ -250,8 +283,11 @@
                     <td><a href="http://www.w3schools.com/js/" target="_blank">W3Schools</a></td>
                 </tr>
 
+
             </tbody>
         </table>
+
+
 
 
 
