lots of new stuff

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
                     <li><a href="pages/basics/linking-js.html">Linking JS to your page</a></li>
                     <li><a href="pages/basics/operators.html">Operators</a></li>
                     <li><a href="pages/basics/strings.html">Strings</a></li>
-
                     <li><a href="pages/basics/this.html">this</a></li>
                     <li><a href="pages/basics/typeof.html">typeof</a></li>
                     <li><a href="pages/basics/variables.html">Variables and Scope</a></li>
@@ -73,6 +72,8 @@
 
                 <ul class="sub-nav">
                   <li><a href="pages/functions/basic-functions.html">Basic Functions</a></li>
+                  <li><a href="pages/functions/immediately-invoked-functions.html">Immediately Invoked Functions</a></li>
+                  <li><a href="pages/functions/invoking-functions.html">Invoking Functions</a></li>
                 </ul>
             </ul>
         </nav>
