--- a/pages/functions/invoking-functions.html
+++ b/pages/functions/invoking-functions.html
@@ -69,6 +69,27 @@
                 <img class="img-fluid" src="../../_img/function_parameters.png">
             </div>
         </div>
+
+        <h4>Example</h4>
+        <div class="row">
+            <div class="col-6">
+                <p>This example returns two things.</p>
+                <ul>
+                    <li>moof</li>
+                    <li>the window object</li>
+                </ul>
+                <p>This is because the 'speak' function is invoked with an argument of 'moof'. The console then prints that argument.</p>
+                <p>Since the function is called without an owner Object, 'this' becomes the global window object.</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var speak = function(what) {
+          console.log(what);
+          console.log(this);
+        }
+
+        speak("moof");</span></pre>
+            </div>
+        </div>
     </section>
 
 
@@ -139,6 +160,101 @@ plus: function(a,b){
 
 
 
+
+
+    <section class="container">
+        <h2>Invoking as a constructor</h2>
+        <div class="row">
+            <div class="col">
+                <p>If a function invocation is preceded with the new keyword, it is a constructor invocation.</p>
+                <p>This looks like you create a new function, but since JavaScript functions are Objects, you are actually creating a new object.</p>
+                <p>Functions in JavaScript can do more than just help you create methods for existing objects. They can create new objects themselves, which is called constructing an object.</p>
+                <p>You create an object using the 'new' keyword.This method of creating an object is called 'constructor invocation.</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-6">
+                <p>Dog is an object. Create a new object (instance of Dog) with the 'new' constructor.</p>
+                <p>This prints out 'Rover'.</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var Dog = function() {
+  var name, breed;
+}
+
+firstDog = new Dog;
+firstDog.name = "Rover";
+firstDog.breed = "Doberman";
+
+console.log(firstDog.name);</span></pre>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <img class="img-fluid" src="../../_img/invoke-constructor.png">
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+    <section class="container">
+        <h2>Invoking using Call and Apply methods (indirect invocation)</h2>
+        <div class="row">
+            <div class="col">
+                <p>These methods give you more control over the 'this' keyword.</p>
+                <p>They let you define what 'this' will be.</p>
+                <p>Call & Apply take 2 parameters:</p>
+                <ul>
+                    <li>What you want the value of the this argument to be inside the function</li>
+                    <li>The arguments you want to pass to the function</li>
+                </ul>
+            </div>
+        </div>
+
+
+
+
+
+
+        <h3>The call() method</h3>
+        <div class="row">
+            <div class="col">
+                <p>The call() method is a predefined JavaScript function method.</p>
+                <p>It can be used to invoke (call) a function with an owner object as the first argument (parameter).</p>
+                <p>With call(), you can use a method belonging to another object.</p>
+            </div>
+        </div>
+
+        <h4>Example</h4>
+        <div class="row">
+            <div class="col-6">
+                <p>This example calls the fullName function of the 'person' Object, but is using it on the 'myObject' Object.</p>
+                <p>If you just entered <span class="standout">person.fullName();</span>, the output would be 'John Doe'.</p>
+                <p>But when you use call() on another Object, it calls that Objects properties, then runs the function from the first Object.</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var person = {
+  firstName:"John",
+  lastName: "Doe",
+  fullName: function() {
+  return this.firstName + " " + this.lastName;
+  }
+}
+
+var myObject = {
+  firstName:"Mary",
+  lastName: "Doe",
+}
+
+<span class="code-comment">// Will return "Mary Doe"</span>
+person.fullName.call(myObject);</span></pre>
+            </div>
+        </div>
+    </section>
 
 
 
